# FP016

./: .gitignore  README.md  main.py  pyproject.toml  week20.py
assets/: titleScreen.py
week0/: main.py  pyproject.toml  sample.dvi  week0.py
week0/schedule/: sample.tex
week1/: number_representation.tex  number_representation_practice.tex  pyproject.toml  week1.py
week10/: pyproject.toml
week11/: main.py  pyproject.toml
week12/: main.py  pyproject.toml
week13/: main.py  pyproject.toml
week14/: main.py  pyproject.toml
week15/: main.py  pyproject.toml
week16/: main.py  pyproject.toml
week17/: main.py  pyproject.toml
week18/: main.py  pyproject.toml
week19/: main.py  pyproject.toml
week2/: pyproject.toml
week20/: main.py  pyproject.toml
week21/: main.py  pyproject.toml
week22/: main.py  pyproject.toml
week23/: main.py  pyproject.toml
week24/: main.py  pyproject.toml
week25/: main.py  pyproject.toml
week4/: pyproject.toml
week5/: pyproject.toml
week7/: main.py  pyproject.toml
