[project]
name = "fp016"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
]

[tool.uv.workspace]
members = [
    "week0",
    "week",
    "week1",
    "week2",
    "week3",
    "week4",
    "week5",
    "week6",
    "week7",
    "week8",
    "week9",
    "week10",
    "week11",
    "week12",
    "week13",
    "week14",
    "week15",
    "week16",
    "week16/week17",
    "week17",
    "week18",
    "week19",
    "week20",
    "week21",
    "week22",
    "week23",
    "week24",
    "week25",
]
